syntax = "proto3";

package node;
option go_package = "github.com/frandiazrio/arca/src/api/node";

import "google/protobuf/timestamp.proto";


message Empty{}

message Bool{
  bool value=1;
}

message HeartBeat{
  Node SourceNode= 1;
  google.protobuf.Timestamp Timestamp = 2;
}

message PingMessage{
  string Info = 1;
  string id = 2;
  google.protobuf.Timestamp Timestamp = 3;
} 

message Node{
  string address = 1;
  int32 port = 2;
}

service NodeAgent{
  rpc echoReply(PingMessage) returns (PingMessage);
  rpc findSuccesor(Node) returns (Node);
  rpc addNodeToFingerTable(Node) returns (Empty);
  rpc ConfirmHeartBeat(HeartBeat) returns (Bool);
  rpc SendHeartBeat(Empty) returns (HeartBeat);
} 
